--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "quickstart-node-typescript-api",
+  "name": "desafio-soft-backend",
   "version": "1.0.0",
-  "description": "Quickstart NodeJs API com Typescript",
-  "projectPrefix": "quickstart",
+  "description": "Desafio Soft Backend",
+  "projectPrefix": "desafio-backend",
   "main": "index.js",
   "engines": {
     "npm": ">=6.0.0",
@@ -37,14 +37,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SoftdesignBrasil/quickstart-nodejs.git"
+    "url": "git+https://github.com/Edu-Garcia/desafio-backend.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SoftdesignBrasil/quickstart-nodejs/issues"
+    "url": "https://github.com/Edu-Garcia/desafio-backend/issues"
   },
-  "homepage": "https://github.com/SoftdesignBrasil/quickstart-nodejs#readme",
+  "homepage": "https://github.com/Edu-Garcia/desafio-backend#readme",
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
