--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/supertest": "^2.0.11",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "commitlint-plugin-function-rules": "^1.6.0",
@@ -98,8 +99,9 @@
     "reflect-metadata": "^0.1.10",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "0.2.41",
+    "typeorm": "0.2.29",
     "typeorm-seeding": "^1.6.1",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "yup": "^0.32.11"
   }
