--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -99,6 +100,7 @@
     "reflect-metadata": "^0.1.10",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
+    "tsyringe": "^4.7.0",
     "typeorm": "0.2.29",
     "typeorm-seeding": "^1.6.1",
     "uuid": "^8.3.2",
